--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "package": "electron-forge package",
     "make": "electron-forge make"
   },
-  "author": "",
+  "author": "yjs",
   "license": "ISC",
   "devDependencies": {
     "@electron-forge/cli": "^7.2.0",
@@ -18,7 +18,7 @@
     "@electron-forge/maker-squirrel": "^7.2.0",
     "@electron-forge/maker-zip": "^7.2.0",
     "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
-    "electron": "^28.0.0"
+    "electron": "^28.1.0"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0"
