--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron-forge start",
+    "start": "nodemon --exec electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make"
   },
